trunk/Archive2/1e/22d6354114c01d/output
main.cpp:4:16: error: redefinition of 'i' with a different type: 'double' vs 'int'
        double i = 0;
               ^
main.cpp:2:13: note: previous definition is here
    if (int i = 1)
            ^
main.cpp:8:16: error: redefinition of 'i' with a different type: 'double' vs 'int'
        double i = 0;
               ^
main.cpp:6:16: note: previous definition is here
    while (int i = 1)
               ^
2 errors generated.
