trunk/Archive2/1e/22d6354114c01d/main.cpp
int main() {
    if (int i = 1)
    {
        double i = 0;
    }
    while (int i = 1)
    {
        double i = 0;
    }
    return 0;
}